# warn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  warn.py  warnings.md
ext/VS/: CoreCheckers.md  compiler-warnings-by-compiler-version.md  compiler-warnings-c4000-through-c4199.md  compiler-warnings-c4200-through-c4399.md  compiler-warnings-c4400-through-c4599.md  compiler-warnings-c4600-through-c4799.md  compiler-warnings-c4800-through-c4999.md  download-msvc-warnings.zsh  notes.md
templates/: pop  push  template
warn/: parser.py  version.py  warning.py
